ICE-10509 added white-space:nowrap; styling to the whole tree to avoid text wrapping while dragging it
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@44158 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/tree/tree.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/tree/tree.css
@@ -23,6 +23,7 @@ span.if-tree span.ui-icon-empty {
     vertical-align: middle;
     padding: 5px 0;
 	text-align: left;
+	white-space: nowrap;
 }
 
 .if-tree table.if-node-cnt {
